# Studies

C Procedural Programming - IS/: GIGA_GRAZYNA.c
C Procedural Programming - IS/Introduction to Computer Science (C)/: README.md.md
C Procedural Programming - IS/lab1/: lab1_3b.c
C Procedural Programming - IS/lab10/: grazynka  lab10_4.c  lab10_5.c
C Procedural Programming - IS/lab11/: a.out
C Procedural Programming - IS/lab13/: lab13_1.c  lab13_3.c
C Procedural Programming - IS/lab15/: lab15_1.c
C Procedural Programming - IS/lab2/: lab2_3.c
C Procedural Programming - IS/lab3/: lab3_1.c  lab3_2.c  lab3_3.c  lab3_4.c
C Procedural Programming - IS/lab4/: lab4_1.c
C Procedural Programming - IS/lab5/: ex2.c  ex4.c
C Procedural Programming - IS/lab7/: lab7_2.c
C Procedural Programming - IS/lab8/: deb_3  deb_4  deb_5  deb_6_1  deb_6_1.c  deb_6_2
C Procedural Programming - IS/lab9/: lab9_1.c  lab9_3.c
C Procedural Programming v2/lab01/: ex1.c  (+3 more)
C++ Object-oriented Programming/Learn/week_03/S/: CMakeLists.txt  main.cpp
C++ Programming - FT/: cpp.txt
FoDS/: Fundamentals_lab1.ipynb  Fundamentals_lab4.ipynb  lab1.ipynb  lab2.docx  lab4.docx  lab5.docx  project_description_winter_2023.docx
LAB2/: CMakeLists.txt  Main.cpp
Metody Monte Carlo w fizyce/: CMakeLists.txt  Main.cpp  script.gnu  script1.gnu
Metody Numeryczne/: CMakeLists.txt
Particles/: Decay_1.C  Decay_2.C  Decay_3.C  Decay_3CM.C  Decay_4.C  Decay_4CM.C  Decay_5a.C  Decay_5aCM.C  Decay_5b.C  Decay_5bCM.C  beuty quark.pptx
Python - remotew/: Untitled.ipynb
monte/: Main.cpp  script.gnu
(+543 files in other folders)
